Fix post item css color and overflow
- Fixed title overflow.

- Fixed excerpt overflow.

- Fixed color of upvote stat.

--- a/src/ui/item-post/item-post.module.scss
+++ b/src/ui/item-post/item-post.module.scss
@@ -1,3 +1,5 @@
+@import 'text';
+
 .article {
   background: white;
   border-bottom: 1px solid #f1f3f5;
@@ -23,6 +25,13 @@
   margin: 0.5rem 0 0;
 }
 
+.title,
+.excerpt {
+  word-break: break-word;
+
+  @include clamp;
+}
+
 .meta {
   align-items: center;
   display: flex;
@@ -43,7 +52,7 @@
   }
 
   .upvotes {
-    color: #01d47c;
+    color: #01b168;
   }
 
   .downvotes {
